--- a/config/opensearch_dashboards.yml
+++ b/config/opensearch_dashboards.yml
@@ -177,7 +177,7 @@ opensearch_security.auth.anonymous_auth_enabled: false
 opensearch_security.cookie.secure: false # set to true when using HTTPS
 opensearch_security.cookie.ttl: 3600000
 opensearch_security.session.ttl: 3600000
-opensearch_security.session.keepalive: false
+opensearch_security.session.keepalive: true
 opensearch_security.multitenancy.enabled: false
 opensearch_security.readonly_mode.roles: [opensearch_dashboards_read_only']
 opensearch_security.auth.unauthenticated_routes: []
