--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "test:ftr:runner": "node scripts/functional_test_runner",
     "test:coverage": "grunt test:coverage",
     "checkLicenses": "node scripts/check_licenses --dev",
+    "docker:up:opensearch": "docker-compose up -d",
+    "docker:down:opensearch": "docker-compose down",
     "build-platform": "node scripts/build",
     "build": "node scripts/build --all-platforms",
     "start": "node scripts/opensearch_dashboards --dev",
