--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,29 @@
-version: '3'
 services:
-  opensearch-node1:
+  opensearch:
     image: opensearchproject/opensearch:1.3.2
-    container_name: opensearch-node1
+    container_name: opensearch-node
     environment:
       - cluster.name=opensearch-cluster
-      - node.name=opensearch-node1
-      - discovery.seed_hosts=opensearch-node1,opensearch-node2
-      - cluster.initial_master_nodes=opensearch-node1,opensearch-node2
+      - node.name=opensearch-node
+      - discovery.type=single-node
       - bootstrap.memory_lock=true
       - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
-        soft: -1
+        soft: -1 # Set memlock to unlimited (no soft or hard limit)
         hard: -1
       nofile:
-        soft: 65536
+        soft: 65536 # Maximum number of open files for the opensearch user - set to at least 65536
         hard: 65536
     volumes:
-      - opensearch-data1:/usr/share/opensearch/data
+      - opensearch-data:/usr/share/opensearch/data
     ports:
-      - 9200:9200
-      - 9600:9600
+      - 9200:9200 # REST API
+      - 9600:9600 # Performance Analyzer
     networks:
-      - opensearch-net
-  opensearch-node2:
-    image: opensearchproject/opensearch:1.3.2
-    container_name: opensearch-node2
-    environment:
-      - cluster.name=opensearch-cluster
-      - node.name=opensearch-node2
-      - discovery.seed_hosts=opensearch-node1,opensearch-node2
-      - cluster.initial_master_nodes=opensearch-node1,opensearch-node2
-      - bootstrap.memory_lock=true
-      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    volumes:
-      - opensearch-data2:/usr/share/opensearch/data
-    networks:
-      - opensearch-net
-
-volumes:
-  opensearch-data1:
-  opensearch-data2:
-
+      - opensearch
 networks:
-  opensearch-net:
+  opensearch:
+volumes:
+  opensearch-data:
+    driver: local
